@@ -40,6 +40,7 @@ module ActiveMerchant #:nodoc:
     # * Creditos directos (Tarjeta D)
     # * Panal
     # * Verve
+    # * Tuya
     #
     # For testing purposes, use the 'bogus' credit card brand. This skips the vast majority of
     # validations, allowing you to focus on your core concerns until you're ready to be more concerned
@@ -134,6 +135,7 @@ module ActiveMerchant #:nodoc:
       # * +'tarjeta-d'+
       # * +'panal'+
       # * +'verve'+
+      # * +'tuya'+
       #
       # Or, if you wish to test your implementation, +'bogus'+.
       #
