@@ -94,6 +94,7 @@
 * Braintree: Send merchant_account_id when generating client token [almalee24] #4991
 * CheckoutV2: Update reponse message for 3DS transactions [almalee24] #4975
 * HiPay: Scrub/Refund/Void [gasb150] #4995
+* Add new card type Tuya. GlobalCollect & Decidir: Improve support for Tuya card type [sinourain] #4993
 
 == Version 1.135.0 (August 24, 2023)
 * PaymentExpress: Correct endpoints [steveh] #4827
